[package]
name = "roux-stream"
version = "0.1.0"
authors = ["Florian Brucker <mail@florianbrucker.de>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
futures = "0.3"
log = "0.4"
roux = "1.3"
stderrlog = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"

[dev-dependencies]
logtest = "2.0.0"