[package]
name = "roux-stream"
version = "0.2.0"
authors = ["Florian Brucker <mail@florianbrucker.de>"]
edition = "2021"
license = "MIT"
description = "A streaming API for the roux Reddit client"
readme = "README.md"
homepage = "https://github.com/torfsen/roux-stream"
repository = "https://github.com/torfsen/roux-stream"
keywords = ["reddit", "roux", "stream", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
roux = "2"
tokio = "1"
tokio-retry = "0.3"

[dev-dependencies]
logtest = "2.0.0"
stderrlog = "0.5.4"
tokio = { version = "1.28.1", features = ["full"] }
